﻿The Cacti Group | spine

0.8.8e

-bug#0002398: Buffer overflow
-bug#0002447: Building spine on Debian Jessie (testing) fails 
-bug#0002536: Spine segfaults when 18k+ hosts are to be pulled
-bug#0002576: Call to a non-existent column of the database in poller.c
-bug#0002578: spine doesn't compile on ubuntu 12.04
-bug#0002585: Spine: buffer overflow in logging when RESULTS_BUFFER>LOGSIZE can SEGV
-bug#0002588: Spine "is_numeric" incorrectly returns TRUE for some hexadecimal values 

0.8.8d

-feature: add snmp system information gathering

0.8.8c
-bug: remove obsolete reference causing pre-compile issues

0.8.8b
-bug: set appropriate mysql 5.5+ timeouts

0.8.8a
-bug#0002204: spine corrupted double-linked list error
-bug#0002206: On multi-architecture Debian platforms spine fails to build
-bug#0002205: Typo, twice, in spine.c: absense -> absence

0.8.8
-bug#0002185: Multiple memory leaks found in spine

0.8.7i
-bug: Rework the way ping works, due to bad impact of changes in 0.8.7h
-bug: ICMP ping not working on windows due to cygwin change
-bug: Linux capabilities reported as on regardless of state
-feature: Add a reconnect capability when the mysql server goes away

0.8.7h
-bug#0001669: Problems with getting data from script using SPINE on Windows Server 2003 x32 
-bug#0001829: Wrong string numerical value got from Spine SNMP poller 
-bug#0001899: spine treats undef replies as 0
-bug#0001968: Spine Error with Cisco FWSM firewalls
-bug#0001974: PRIV_PROC_EXEC is required for Spine on Solaris 10 
-bug#0002059: Spine doing too many (80+) connections when polling 
-bug: Net-snmp API issues cause spine crashes with some SNMP agents
-bug: Host list not properly initialized
-bug: Mutex locking issues cause deadlocks in Windows
-bug: Escape windows type back slashes in scripts
-bug: Use safer Non Net-SNMP string parsing calls for snmpget and snmpgetnext
-bug: be smart for SNMP V3 and use AuthNoPriv when privacy passphrase is empty